--- a/src/DisplayInfo.Uwp/DisplayInfo.Uwp.csproj
+++ b/src/DisplayInfo.Uwp/DisplayInfo.Uwp.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{863CFBD5-3BF5-4876-B909-1B6EFCA35804}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamicRange.Uwp</RootNamespace>
-    <AssemblyName>DynamicRange.Uwp</AssemblyName>
+    <RootNamespace>DisplayInfo.Uwp</RootNamespace>
+    <AssemblyName>DisplayInfo.Uwp</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.22621.0</TargetPlatformVersion>
